--- a/fee/package.json
+++ b/fee/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
+    "react-use-cart": "^1.13.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
